--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -429,7 +429,7 @@ blockquote {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_1017,dpr_2,q_auto,f_auto/v1531486239/topmonks.com/bgnd_header.png");
   }
   @media screen and (min-width: 480px) and (max-width: 839px) {
-    background-position: right calc(50% - 460px) top -1px;;
+    background-position: right calc(50% - 460px) top -1px;
   }
 
   .tm-logo {
