--- a/www.topmonks.com/src/stylesheets/footer.scss
+++ b/www.topmonks.com/src/stylesheets/footer.scss
@@ -38,9 +38,11 @@
   display: inline-block;
   height: 32px;
   margin: 0;
-  &:first-child,
+  &:first-child{
+    padding-left: 6px;
+  }
   &:last-child {
-    padding: 4px 6px 0;
+    padding-right: 6px;
   }
   @media screen and (max-width: 339px) {
     padding: 4px 8px 0;
