--- a/www.topmonks.com/src/stylesheets/main.scss
+++ b/www.topmonks.com/src/stylesheets/main.scss
@@ -356,43 +356,61 @@ li.tm-partners__item--adler {
 .tm-case-studies__logo {
   height: 255px;
   border-radius: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: var(--tm-secondary) top center no-repeat;
-  background-size: cover;
-  background-clip: content-box;
+  overflow: hidden;
+  .tm-bgnd-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--tm-secondary) 50% center no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.2s ease-in-out;
+  }
+  // &.inactive{
+  //  filter: grayscale(100%);
+  //}
   .sprite {
     width: 33%;
     color: white;
-    transition: width 0.3s ease-in-out;
+    transition: width 0.2s ease-in-out;
   }
   svg {
     fill: currentColor;
   }
 }
-.tm-case-studies__logo:hover .sprite {
-  width: 36%;
-  transition: width 0.3s ease-in-out;
+.tm-case-studies__logo:hover:not(.inactive) {
+  .tm-bgnd-wrapper {
+    transform: scale(1.1);
+  }
+  .sprite {
+    width: 45%;
+  }
 }
 .tm-case-studies__title {
   text-align: center;
 }
-.tm-case-studies__logo--pricefx {
-  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532446643/topmonks.com/bgnd_cs_pricefx.jpg");
+.tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
 }
-.tm-case-studies__logo--ceska-sporitelna {
-  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532446643/topmonks.com/bgnd_cs_cs.jpg");
+.tm-case-studies__logo--ceska-sporitelna .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_cs.jpg");
+}
+.tm-case-studies__logo--adler .tm-bgnd-wrapper {
+  background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_auto,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_adler.jpg");
 }
 
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .tm-case-studies__logo--pricefx {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532446643/topmonks.com/bgnd_cs_pricefx.jpg");
+  .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
   }
-  .tm-case-studies__logo--ceska-sporitelna {
-    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532446643/topmonks.com/bgnd_cs_cs.jpg");
+  .tm-case-studies__logo--ceska-sporitelna .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_cs.jpg");
+  }
+  .tm-case-studies__logo--adler .tm-bgnd-wrapper {
+    background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_adler.jpg");
   }
 }
 /* CASE STUDIES SECTION END */
