--- a/www.topmonks.com/src/html/layouts/topmonks.html
+++ b/www.topmonks.com/src/html/layouts/topmonks.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="//res.cloudinary.com">
   <link rel="preconnect" href="//cdnjs.cloudflare.com">
   <link rel="preconnect" href="//fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="//p.typekit.net">
+  <link rel="preconnect" href="//use.typekit.net">
   <link rel="preconnect" href="//cdn.jsdelivr.net">
   <link rel="preconnect" href="//www.google-analytics.com">
   <link rel="preconnect" href="//static.hotjar.com">
