--- a/www.topmonks.com/src/stylesheets/case-studies-common.scss
+++ b/www.topmonks.com/src/stylesheets/case-studies-common.scss
@@ -1,8 +1,12 @@
 .tm-case-study__hero {
-    background-image: url("/images/bgnd_curve_3.svg"), url("/images/bgnd_curve_1.svg");
-    background-repeat: no-repeat, no-repeat;
-    background-position: bottom center, bottom -5px left calc(50% - 530px);
-    background-size: 100% auto, auto;
+  background-image: url("/images/bgnd_curve_3.svg"),
+    url("/images/bgnd_curve_1.svg");
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom center, bottom -5px left calc(50% - 530px);
+  background-size: 100% auto, auto;
+  h3 {
+    font-weight: 400;
+  }
 }
 .tm-case-study__project-numbers-list {
   display: flex;
@@ -23,19 +27,19 @@
   line-height: 140px;
   margin: 1em auto 0.5em;
   border-radius: 50%;
-  box-shadow: 0 2px 23px 0 rgba(0,0,0,0.10);
-  font-size: 38px;
+  box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.1);
+  font-size: 2.111em;
   background-color: #ffffff;
 }
 .tm-case-study__section {
-  background: top 7em center no-repeat;
+  background: top 7.5em center no-repeat;
   h3 {
-    padding-bottom: 7em;
+    padding-bottom: 8em;
   }
 }
 
 @media screen and (min-width: 480px) {
-  .tm-case-study__hero{
+  .tm-case-study__hero {
     background-position: bottom center, bottom 75px left calc(50% - 400px);
   }
   .tm-case-study__project-numbers-item {
