--- a/www.topmonks.com/src/stylesheets/typography.scss
+++ b/www.topmonks.com/src/stylesheets/typography.scss
@@ -46,7 +46,7 @@ body {
 h1,
 h2 {
   font-size: 1.75em; //28px
-  line-height: 32px;
+  line-height: 1.143em; //32px
   text-transform: uppercase;
   text-align: center;
   color: #000000;
@@ -55,6 +55,7 @@ h2 {
 }
 h3 {
   font-size: 1.5em; //24px
+  line-height: 1.167em; //28px
   text-align: center;
   color: #000000;
   font-weight: 900;
@@ -100,7 +101,7 @@ ul li {
   h1,
   h2 {
     font-size: 2.111em; //38px
-    line-height: 46px;
+    line-height: 1.211em; //46px
   }
   h3 {
     font-size: 1.333em; //24px
