--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -9,8 +9,8 @@ body {
   padding: 0;
   margin: 0 auto;
   max-width: 100%;
-  font-family: Roboto, Arial, sans-serif;
-  font-weight: lighter;
+  font-family: Lato, Roboto, Arial, sans-serif;
+  font-weight: normal;
   -webkit-font-kerning: normal;
   font-kerning: normal;
   font-variant-numeric: lining-nums slashed-zero;
@@ -32,41 +32,36 @@ header {
 }
 
 h1 {
-  font-size: 38px;
-  font-weight: lighter;
+  font-size: 36px;
   color: black;
   text-align: center;
 }
 
 h2 {
-  font-size: 38px;
-  font-weight: lighter;
+  font-size: 36px;
   color: black;
   text-align: center;
 }
 
 h3 {
   font-size: 18px;
-  font-weight: lighter;
-  color: #4a4a4a;
+  color: black;
   text-align: center;
 }
 
 h4 {
   font-size: 18px;
   color: #3d2476;
-  font-weight: normal;
   text-align: center;
 }
 
-h2::after,
-h3::after {
-  content: "";
-  display: block;
-  width: 101px;
-  height: 4px;
-  margin: 16px auto 0;
-  background-color: #abd2ff;
+p {
+  color: #000;
+  font-size: 16px;
+}
+p.description {
+  text-align: center;
+  color: #4A4A4A;
 }
 
 .a11y--hidden {
@@ -77,11 +72,6 @@ h3::after {
   overflow: hidden;
   clip: rect(1px 1px 1px 1px); /* IE6, IE7 */
   clip: rect(1px, 1px, 1px, 1px);
-}
-
-.description {
-  text-align: center;
-  font-size: 1.1em;
 }
 
 .wrapper {
@@ -111,8 +101,8 @@ h3::after {
 }
 
 .main_info h1 {
-  font-size: 38px;
-  font-weight: lighter;
+  font-size: 36px;
+  font-weight: bold;
   text-align: left;
   @media screen {
     color: white;
@@ -127,6 +117,8 @@ h3::after {
   line-height: 25px;
   text-decoration: none;
   text-align: left;
+  font-weight: normal;
+  font-size: 16px;
   @media screen {
     color: #fff;
     position: relative;
@@ -145,6 +137,7 @@ h3::after {
     top: 3px;
   }
 }
+
 @media print {
   .main_info ul {
     list-style-type: circle;
@@ -156,9 +149,9 @@ h3::after {
   font-weight: bold;
   color: var(--primary-color);
   background-color: white;
-  border-radius: 2px;
-  box-shadow: 2px 2px var(--primary-color);
-  padding: 14px 48px;
+  border-radius: 30px;
+  box-shadow: 4px 4px 22px var(--primary-color);
+  padding: 14px 68px;
   text-decoration: none;
 }
 
@@ -222,33 +215,36 @@ h3::after {
   visibility: hidden;
 }
 
-.sec_title hr {
-  width: 101px;
-  height: 4px;
-  border: none;
-  background-color: var(--secondary-color);
+/*Základní info*/
+#basic-info {
+  h2 {
+    line-height: 4px;
+  }
+  p {
+    color: #9B9B9B;
+    text-align: center;
+  }
+  .basic-info_box {
+    width: auto;
+    height: 140px;
+    border-radius: 20px;
+    box-shadow: 0px 4px 10px #D5E9FF;
+  }
 }
 
 /*Nabídka kurzů - 4 sloupce: */
-.courses {
-  text-align: center;
-  display: block;
-  font-size: 18px;
-  color: #4a4a4a;
-}
 
 .courses h3 {
   font-size: 24px;
   font-weight: normal;
-}
-
-.courses h3::after {
-  display: none;
+  text-align: left;
+  margin-bottom: 0;
 }
 
 .courses h4 {
   color: #9b9b9b;
   font-weight: 300;
+  text-align: left;
   margin: 0;
 }
 
@@ -256,56 +252,29 @@ h3::after {
   padding-bottom: 8px;
 }
 
-.courses a.button {
-  font-size: 18px;
-  font-weight: bold;
-  color: var(--primary-color);
-  padding: 14px 38px;
-  background-color: var(--secondary-color);
-  border: none;
-  border-radius: 2px;
-  text-decoration: none;
-}
-
 .courses a.button:hover {
   background-color: #a3b7cc;
 }
 
-.fill_1::before {
-  content: "";
-  display: block;
+.fill_1 {
   background: url("/images/fill_1.svg") no-repeat;
   width: 81px;
   height: 97px;
   margin: 0 auto;
 }
 
-.fill_2::before {
-  content: "";
-  display: block;
+.fill_2 {
   background: url("/images/fill_2.svg") no-repeat;
   width: 81px;
   height: 97px;
   margin: 0 auto;
 }
 
-.fill_3::before {
-  content: "";
-  display: block;
+.fill_3 {
   background: url("/images/fill_3.svg") no-repeat;
   width: 81px;
   height: 97px;
   margin: 0 auto;
-}
-
-/*sekce ukazka:*/
-.illustration {
-  background: url("/images/ukazkaBG.svg") no-repeat;
-  background-position-x: 50%;
-  position: relative;
-  min-height: 850px;
-  margin-top: 4em;
-  overflow-x: hidden;
 }
 
 .price {
@@ -490,7 +459,6 @@ footer {
 }
 
 .contact p {
-  font-weight: lighter;
   @media screen {
     color: #fff;
   }
@@ -502,13 +470,12 @@ footer {
 
 .form input {
   padding: 15px;
-  width: 77%;
+  width: 320px;
   background-color: white;
   font-size: 18px;
   color: #9b9b9b;
-  border-radius: 1px;
+  border-radius: 30px;
   border: 1px solid #84beff;
-  margin-top: 10px;
   display: block;
   float: right;
 }
@@ -519,55 +486,10 @@ footer {
   font-weight: bold;
   font-size: 18px;
   color: white;
-  border-radius: 2px;
-  box-shadow: 6px 6px #bbdbff;
-  padding: 15px 60px;
-  margin-top: 10px !important;
+  border-radius: 30px;
+  box-shadow: 6px 6px 10px #bbdbff;
+  padding: 15px 50px;
   display: block;
-}
-
-.agenda {
-  position: relative;
-}
-
-.agenda h2::after {
-  background-color: var(--secondary-color);
-}
-
-.agenda h3 {
-  color: #3d2476;
-  font-weight: 500;
-}
-
-.agenda img {
-  width: 80%;
-  max-height: 300px;
-  max-width: 600px;
-}
-
-.agenda p {
-  @media screen {
-    color: #4a4a4a;
-  }
-}
-
-.agenda .pics {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  min-height: 380px;
-}
-
-.agenda .wrapper::after {
-  content: "";
-  display: block;
-  background: url("/images/shapeBlue.svg") no-repeat;
-  background-position-x: 50%;
-  position: absolute;
-  right: 0;
-  top: 400px;
-  width: 179px;
-  height: 412px;
 }
 
 .contact h3 {
@@ -586,7 +508,6 @@ footer {
 }
 
 .contact .mail {
-  font-weight: lighter;
   font-size: 18px;
   text-align: center;
 }
@@ -600,13 +521,6 @@ footer {
   width: 84px;
   height: 84px;
   margin: 15px auto;
-}
-
-.contact .contact_line hr {
-  width: 80%;
-  height: 1px;
-  border: none;
-  background-color: white;
 }
 
 .social {
@@ -721,10 +635,6 @@ footer {
     padding-top: 2em;
   }
 
-  #ukazky img {
-    max-width: 100%;
-  }
-
   .courses p {
     height: auto;
     padding-bottom: 4px;
@@ -733,11 +643,6 @@ footer {
   .fill_1,
   .fill_2 {
     padding-bottom: 30px;
-  }
-
-  .illustration {
-    min-height: 600px;
-    overflow: hidden;
   }
 
   .email_form {
@@ -754,14 +659,6 @@ footer {
     font-size: 14px;
     box-shadow: 3px 3px #bbdbff;
     padding: 16px 10px;
-  }
-
-  #agenda p {
-    width: 100%;
-  }
-
-  .agenda .pics {
-    min-height: 10px;
   }
 
   .gallery img {
