Adler CS finished, ready to publish...

--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -13,8 +13,9 @@
       {% if caseStudiesData.activeCase != 'adler' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--adler inactive">
-          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
+        <a href="/case-studies/adler">
+        <div class="tm-case-studies__logo tm-case-studies__logo--adler">
+          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div></a>
         <h3>Adler</h3>
         <p>Tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the applications will be integrated into one comprehensive administration platform in the future.</p>
       </div>
