--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -32,9 +32,9 @@
     height: 100%;
     transition: transform 0.2s ease-in-out;
   }
-  // &.inactive{
-  //  filter: grayscale(100%);
-  //}
+  &.inactive {
+    filter: grayscale(100%);
+  }
   .sprite {
     width: 33%;
     color: white;
@@ -66,8 +66,8 @@
 }
 
 @media screen and (min-device-pixel-ratio: 2),
-screen and (min-resolution: 192dpi),
-screen and (min-resolution: 2dppx) {
+  screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx) {
   .tm-case-studies__logo--pricefx .tm-bgnd-wrapper {
     background-image: url("https://res.cloudinary.com/topmonks/image/upload/w_322,dpr_2,q_auto,f_auto/v1532593856/topmonks.com/bgnd_cs_pricefx.jpg");
   }
