--- a/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
+++ b/www.topmonks.com/src/stylesheets/components/case-studies/index.scss
@@ -14,6 +14,9 @@
       margin: 8px 0;
     }
   }
+  a:hover{
+    text-decoration: none;
+  }
 }
 .tm-case-studies__clients + .tm-case-studies__clients {
   margin-top: 24px;
