--- a/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
+++ b/prodeti.topmonks.cz/src/stylesheets/prodeti.scss
@@ -233,42 +233,33 @@ p.description {
 #basic-info {
   h2 {
     line-height: 4px;
+    padding-top: 68px;
   }
   p {
     color: #9B9B9B;
     text-align: center;
   }
-  .basic-info_box {
-    position: relative;
-    width: auto;
-    height: 151px;
-    border-radius: 20px;
-    box-shadow: 0px 4px 10px #D5E9FF;
-    padding-top: 44px;
+
+  .basic-info_box_age {
+    background: url("/images/age_box.svg") no-repeat;
+    width: 330px;
+    height: 230px;
+    margin: 0 auto;
   }
-  .basic-info_box_icons::before {
-    width: 91px;
-    height: 91px;
-    position: absolute;
-    bottom: 105px;
-    right: 101px;
+  .basic-info_box_calendar {
+    background: url("/images/calendar_box.svg") no-repeat;
+    width: 330px;
+    height: 230px;
+    margin: 0 auto;
   }
 
-  .basic-info_box_age::before {
-    content: '';
-    display: block;
-    background: url("/images/age_icon.svg") no-repeat;
+  .basic-info_box_capacity {
+    background: url("/images/capacity_box.svg") no-repeat;
+    width: 330px;
+    height: 230px;
+    margin: 0 auto;
   }
-  .basic-info_box_calendar::before {
-    content: '';
-    display: block;
-    background: url("/images/calendar_icon.svg") no-repeat;
-  }
-  .basic-info_box_capacity::before {
-    content: '';
-    display: block;
-    background: url("/images/capacity_icon.svg") no-repeat;
-  }
+
 }
 
 /*Nabídka kurzů - 4 sloupce: */
@@ -754,8 +745,8 @@ footer {
   }
 
   .form input {
-    padding: 14px;
-    width: 260px;
+    padding: 14px 40px;
+    width: auto;
   }
 
   .form button {
@@ -790,12 +781,6 @@ footer {
 @media (max-width: 768px) {
   .form button {
     padding: 15px 30px;
-  }
-  #basic-info .basic-info_box_age::before, #basic-info .basic-info_box_capacity::before, #basic-info .basic-info_box_calendar::before {
-    right: 36%;
-  }
-  #basic-info .basic-info_box_capacity {
-    margin-top: 40px;
   }
 }
 
