TopMonks.cz: box height

--- a/www.topmonks.cz/src/stylesheets/main.scss
+++ b/www.topmonks.cz/src/stylesheets/main.scss
@@ -197,6 +197,7 @@ blockquote {
     padding-top: 160px;
     z-index: 15;
     position: relative;
+    min-height: 300px;
   }
   .box.box--develop {
     background-image: url("/images/ic_develop.svg");
