--- a/www.topmonks.cz/src/stylesheets/main.scss
+++ b/www.topmonks.cz/src/stylesheets/main.scss
@@ -129,6 +129,7 @@ blockquote {
 
 .sub-text {
   color: var(--tm-grey);
+  text-align: center;
 }
 
 .box,
@@ -214,11 +215,11 @@ blockquote {
 .partners {
   padding: 0 0 3%;
   background: #fff url("/images/bgnd_curve_3.svg") center bottom no-repeat;
-  background-size: 100% auto;
   .tm-bgnd-wrapper {
     background-color: #f3f3f3;
   }
 }
+
 .tm-partners__list {
   color: var(--tm-grey);
   display: -ms-flexbox;
@@ -370,17 +371,32 @@ blockquote {
   background: #fff url("/images/bgnd_curve_4.svg") center top no-repeat;
   background-size: 100% auto;
   text-align: center;
-  .tm-bgnd-wrapper {
+}
+ .costumers .tm-bgnd-wrapper {
     background-color: #f3f3f3;
   }
-  .name {
-    font-size: 16px;
-    color: var(--tm-grey);
-    text-align: center;
-  }
-  blockquote {
-    margin-bottom: 2em;
-  }
+
+.costumers blockquote {
+  text-align: center;
+  font-size: 1.66em;
+  margin: 1.6em 0 1em 0;
+}
+.costumers blockquote::before, blockquote::after {
+  font-size: 2.22em;
+}
+.costumers blockquote::before {
+  left: 66px;
+  top: 2px;
+}
+
+.costumers blockquote::after {
+  bottom: 12px;
+  right: 68px;
+}
+.costumers .name {
+  font-size: 16px;
+  color: var(--tm-grey);
+  text-align: center;
 }
 
 .tm-testimonial__picture {
