--- a/www.topmonks.com/src/html/components/case-studies/index.html
+++ b/www.topmonks.com/src/html/components/case-studies/index.html
@@ -14,18 +14,19 @@
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
         <a href="/case-studies/adler">
-        <div class="tm-case-studies__logo tm-case-studies__logo--adler">
-          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
-        <h3>Adler</h3></a>
+          <div class="tm-case-studies__logo tm-case-studies__logo--adler">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_adler')}}</div></div>
+          <h3>Adler</h3></a>
         <p>Tailor-made solution to automate the process of purchasing, marketing, and sales, with the vision that the applications will be integrated into one comprehensive administration platform in the future.</p>
       </div>
       {% endif %}
       {% if caseStudiesData.activeCase != 'pricefx' %}
       <div
         class="tm-case-studies__clients mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <div class="tm-case-studies__logo tm-case-studies__logo--pricefx inactive">
-          <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
-        <h3>Price f(x)</h3>
+        <a href="/case-studies/price-fx">
+          <div class="tm-case-studies__logo tm-case-studies__logo--pricefx">
+            <div class="tm-bgnd-wrapper">{{macros.sprite('img_logo_pricefx')}}</div></div>
+          <h3>Price f(x)</h3></a>
         <p>Providing consulting professionals to support servicing a rapidly expanding portfolio of customers, and also helping to improve UX of the current website.</p>
       </div>
       {% endif %}
